refactor DhcpOptionsTest to remove unused imports and simplify test methods